fix: Update .env.example to reflect proper Google API Key

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-GEMINI_API_KEY="ADD GEMINI_API_KEY here"
+GOOGLE_API_KEY="ADD GOOGLE_API_KEY here"
 
 # DIP Key is defined here as it is a public key
 DIP_API_KEY="OSOegLs.PR2lwJ1dwCeje9vTj7FPOt3hvpYKtwKkhw"
