--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.11"
 dependencies = [
     "fastmcp>=2.11.2",
     "langchain-google-genai>=2.1.9",
+    "langchain-mcp-adapters>=0.1.9",
     "langgraph>=0.6.4",
     "pydantic>=2.11.7",
     "python-dotenv>=1.1.1",
